sirius-libs to jdk 17 and gradle 7, refactoring and fixing nosql chem db (tmp)